--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-torch==1.7.0
-yacs
-wandb
+yacs~=0.1.8
+wandb~=0.19.4
+
+torch~=2.5.1
+pillow~=11.1.0
+torchvision~=0.2.0
+tqdm~=4.67.1
+torchsummary~=1.5.1
+setuptools~=75.1.0
+tensorboardx~=2.6.2.2
