--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ logs/tiny-transformer/pvt-ti_c100_KD_ours_model_epoch_0268.pyth
 # paths to teacher weights, data, output for CTKD
 /CTKD/save
 git_pass.txt
+__pycache__
