--- a/configs/cifar100/kd/resnet110_resnet32.yaml
+++ b/configs/cifar100/kd/resnet110_resnet32.yaml
@@ -1,6 +1,6 @@
 EXPERIMENT:
   NAME: ""
-  TAG: "kd,resnet110,resnet32,2,9"
+  TAG: "kd,res110,res32,2,9"
   PROJECT: "cifar100_baselines"
 DISTILLER:
   TYPE: "KD"
