--- a/configs/cifar100/kd/resnet32x4_resnet8x4.yaml
+++ b/configs/cifar100/kd/resnet32x4_resnet8x4.yaml
@@ -1,6 +1,6 @@
 EXPERIMENT:
   NAME: ""
-  TAG: "kd,resnet32x4,resnet8x4,2,9"
+  TAG: "kd,res32x4,res8x4,2,9"
   PROJECT: "cifar100_baselines"
 DISTILLER:
   TYPE: "KD"
