--- a/configs/cifar100/kd/resnet32x4_wrn_40_2.yaml
+++ b/configs/cifar100/kd/resnet32x4_wrn_40_2.yaml
@@ -1,6 +1,6 @@
 EXPERIMENT:
   NAME: ""
-  TAG: "kd,resnet32x4,wrn_40_2,2,9"
+  TAG: "kd,res32x4,wrn_40_2,2,9"
   PROJECT: "cifar100_baselines"
 DISTILLER:
   TYPE: "KD"
