added tiny_imagenet config

--- a/configs/tiny_imagenet/r34_r18/dkd.yaml
+++ b/configs/tiny_imagenet/r34_r18/dkd.yaml
@@ -1,16 +1,16 @@
 EXPERIMENT:
   NAME: ""
-  TAG: "dkd,res50,mobilenetv2"
-  PROJECT: "imagenet_baselines"
+  TAG: "dkd,res34,res18"
+  PROJECT: "tiny_imagenet_baselines"
 DATASET:
-  TYPE: "imagenet"
+  TYPE: "tiny_imagenet"
   NUM_WORKERS: 32
   TEST:
     BATCH_SIZE: 128
 DISTILLER:
   TYPE: "DKD"
-  TEACHER: "ResNet50"
-  STUDENT: "MobileNetV2"
+  TEACHER: "ResNet34"
+  STUDENT: "ResNet18"
 SOLVER:
   BATCH_SIZE: 512
   EPOCHS: 50
@@ -25,6 +25,6 @@ LOG:
   SAVE_CHECKPOINT_FREQ: 10
 DKD:
   CE_WEIGHT: 1.0
-  BETA: 2.0
+  BETA: 0.5
   T: 1.0
   WARMUP: 1
