--- a/configs/tiny_imagenet/r34_r18/crd.yaml
+++ b/configs/tiny_imagenet/r34_r18/crd.yaml
@@ -1,6 +1,6 @@
 EXPERIMENT:
   NAME: ""
-  TAG: "dkd,res50,mobilenetv2"
+  TAG: "crd,res34,res18"
   PROJECT: "imagenet_baselines"
 DATASET:
   TYPE: "imagenet"
@@ -8,23 +8,23 @@ DATASET:
   TEST:
     BATCH_SIZE: 128
 DISTILLER:
-  TYPE: "DKD"
-  TEACHER: "ResNet50"
-  STUDENT: "MobileNetV2"
+  TYPE: "CRD"
+  TEACHER: "ResNet34"
+  STUDENT: "ResNet18"
 SOLVER:
-  BATCH_SIZE: 512
-  EPOCHS: 50
-  LR: 0.2
-  LR_DECAY_STAGES: [15, 30, 45]
+  BATCH_SIZE: 256
+  EPOCHS: 100
+  LR: 0.1
+  LR_DECAY_STAGES: [30, 60, 90]
   LR_DECAY_RATE: 0.1
   WEIGHT_DECAY: 0.0001
   MOMENTUM: 0.9
   TYPE: "SGD"
+  TRAINER: "crd" 
+CRD:
+  FEAT:
+    STUDENT_DIM: 512
+    TEACHER_DIM: 512
 LOG:
   TENSORBOARD_FREQ: 50
   SAVE_CHECKPOINT_FREQ: 10
-DKD:
-  CE_WEIGHT: 1.0
-  BETA: 2.0
-  T: 1.0
-  WARMUP: 1
