--- a/configs/tiny_imagenet/r34_r18/kd.yaml
+++ b/configs/tiny_imagenet/r34_r18/kd.yaml
@@ -1,16 +1,16 @@
 EXPERIMENT:
   NAME: ""
-  TAG: "dkd,res50,mobilenetv2"
-  PROJECT: "imagenet_baselines"
+  TAG: "kd,res34,res18"
+  PROJECT: "tiny_imagenet_baselines"
 DATASET:
-  TYPE: "imagenet"
+  TYPE: "tiny_imagenet"
   NUM_WORKERS: 32
   TEST:
     BATCH_SIZE: 128
 DISTILLER:
-  TYPE: "DKD"
-  TEACHER: "ResNet50"
-  STUDENT: "MobileNetV2"
+  TYPE: "KD"
+  TEACHER: "ResNet34"
+  STUDENT: "ResNet18"
 SOLVER:
   BATCH_SIZE: 512
   EPOCHS: 50
@@ -20,11 +20,11 @@ SOLVER:
   WEIGHT_DECAY: 0.0001
   MOMENTUM: 0.9
   TYPE: "SGD"
+KD:
+  TEMPERATURE: 1
+  LOSS:
+    CE_WEIGHT: 1.0
+    KD_WEIGHT: 0.5
 LOG:
   TENSORBOARD_FREQ: 50
   SAVE_CHECKPOINT_FREQ: 10
-DKD:
-  CE_WEIGHT: 1.0
-  BETA: 2.0
-  T: 1.0
-  WARMUP: 1
