--- a/configs/tiny_imagenet/r34_r18/reviewkd.yaml
+++ b/configs/tiny_imagenet/r34_r18/reviewkd.yaml
@@ -1,6 +1,6 @@
 EXPERIMENT:
   NAME: ""
-  TAG: "dkd,res34,res18"
+  TAG: "reviewkd,res34,res18"
   PROJECT: "imagenet_baselines"
 DATASET:
   TYPE: "imagenet"
@@ -8,14 +8,14 @@ DATASET:
   TEST:
     BATCH_SIZE: 128
 DISTILLER:
-  TYPE: "DKD"
+  TYPE: "REVIEWKD"
   TEACHER: "ResNet34"
   STUDENT: "ResNet18"
 SOLVER:
-  BATCH_SIZE: 512
-  EPOCHS: 50
-  LR: 0.2
-  LR_DECAY_STAGES: [15, 30, 45]
+  BATCH_SIZE: 256
+  EPOCHS: 100
+  LR: 0.1
+  LR_DECAY_STAGES: [30, 60, 90]
   LR_DECAY_RATE: 0.1
   WEIGHT_DECAY: 0.0001
   MOMENTUM: 0.9
@@ -23,8 +23,12 @@ SOLVER:
 LOG:
   TENSORBOARD_FREQ: 50
   SAVE_CHECKPOINT_FREQ: 10
-DKD:
+REVIEWKD:
   CE_WEIGHT: 1.0
-  BETA: 0.5
-  T: 1.0
-  WARMUP: 1
+  REVIEWKD_WEIGHT: 1.0
+  WARMUP_EPOCHS: 1
+  SHAPES: [1,7,14,28,56]
+  OUT_SHAPES: [1,7,14,28,56]
+  IN_CHANNELS: [64,128,256,512,512]
+  OUT_CHANNELS: [64,128,256,512,512]
+  STU_PREACT: True
