--- a/configs/tiny_imagenet/r50_mv2/mlkd.yaml
+++ b/configs/tiny_imagenet/r50_mv2/mlkd.yaml
@@ -1,6 +1,6 @@
 EXPERIMENT:
   NAME: ""
-  TAG: "dkd,res50,mobilenetv2"
+  TAG: "kd_ours,res50,mobilenetv2"
   PROJECT: "imagenet_baselines"
 DATASET:
   TYPE: "imagenet"
@@ -8,23 +8,24 @@ DATASET:
   TEST:
     BATCH_SIZE: 128
 DISTILLER:
-  TYPE: "DKD"
+  TYPE: "KD_ours"
   TEACHER: "ResNet50"
   STUDENT: "MobileNetV2"
 SOLVER:
   BATCH_SIZE: 512
-  EPOCHS: 50
+  EPOCHS: 100
   LR: 0.2
-  LR_DECAY_STAGES: [15, 30, 45]
+  LR_DECAY_STAGES: [30, 60, 90]
   LR_DECAY_RATE: 0.1
   WEIGHT_DECAY: 0.0001
   MOMENTUM: 0.9
   TYPE: "SGD"
+  TRAINER: "ours"
+KD:
+  TEMPERATURE: 1
+  LOSS:
+    CE_WEIGHT: 0.5
+    KD_WEIGHT: 0.5
 LOG:
   TENSORBOARD_FREQ: 50
   SAVE_CHECKPOINT_FREQ: 10
-DKD:
-  CE_WEIGHT: 1.0
-  BETA: 2.0
-  T: 1.0
-  WARMUP: 1
