--- a/minillm/configs/deepspeed/ds_config_zero1_fp16.json
+++ b/minillm/configs/deepspeed/ds_config_zero1_fp16.json
@@ -6,7 +6,7 @@
     },
     "zero_allow_untested_optimizer": true,
     "fp16": {
-        "enabled": true,
+        "enabled": false,
         "loss_scale": 0,
         "initial_scale_power": 11,
         "loss_scale_window": 2000,
